edit note und beginnen von review von note

--- a/index.html
+++ b/index.html
@@ -183,11 +183,13 @@
         <div class="flex justify-between text-[#3019bd] font-bold text-md pt-2">
             <span class="back-to-notes cursor-pointer pl-4"> < back to notes</span>
             <div class="rating">
+                unuseful
                 <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#3019bd] rating-1"/>
                 <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#3019bd] rating-2"/>
                 <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#3019bd] rating-3"/>
                 <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#3019bd] rating-4"/>
                 <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#3019bd] rating-5"/>
+                useful
             </div>
 
             <span class="delete-note cursor-pointer pr-4 float-right">
