--- a/index.html
+++ b/index.html
@@ -184,11 +184,11 @@
             <span class="back-to-notes cursor-pointer pl-4"> < back to notes</span>
             <div class="rating">
                 unuseful
-                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#3019bd] rating-1"/>
+                <input type="radio" name="rating-2" class="mask ml-2 mask-star-2 bg-[#3019bd] rating-1"/>
                 <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#3019bd] rating-2"/>
                 <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#3019bd] rating-3"/>
                 <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#3019bd] rating-4"/>
-                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#3019bd] rating-5"/>
+                <input type="radio" name="rating-2" class="mask mr-3 mask-star-2 bg-[#3019bd] rating-5"/>
                 useful
             </div>
 
