--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     <div class="container mx-auto textEditor hidden">
         <div class="flex justify-between text-[#3019bd] font-bold text-md pt-2">
             <span class="back-to-notes cursor-pointer pl-4"> < back to notes</span>
-            <div class="rating">
+            <div class="rating font-normal text-base">
                 unuseful
                 <input type="radio" name="rating-2" class="mask ml-2 mask-star-2 bg-[#3019bd] rating-1"/>
                 <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#3019bd] rating-2"/>
