--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 </nav>
 
 
+<section class="home">
 
     <!-- Fenster zum Hinzufügen von Projekten -->
     <dialog id="my_modal_1" class="modal">
@@ -259,6 +260,7 @@
         </div>
 
     </div>
+</section>
 
 
 <script src="https://cdn.tailwindcss.com"></script>
