--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css'>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="navbar-style.css">
+    <link rel="stylesheet" href="tailwind.css">
 
     <!-- Boxicons CSS -->
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
@@ -254,7 +255,7 @@
         <div id="title" contenteditable="true" spellcheck="false">
             Please select a note to load data.
         </div>
-        <div id="text-content" contenteditable="true" spellcheck="false">
+        <div id="text-content" contenteditable="true" spellcheck="false" class="">
         </div>
 
     </div>
