--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
         <div id="title" contenteditable="true" spellcheck="false">
             Please select a note to load data.
         </div>
-        <div id="text-content" contenteditable="true" spellcheck="false" class="">
+        <div id="text-content" contenteditable="true" spellcheck="false" class="all-revert">
         </div>
 
     </div>
