--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
         <div id="title" contenteditable="true" spellcheck="false">
             Please select a note to load data.
         </div>
-        <div id="text-content" contenteditable="true" spellcheck="false" class="prose">
+        <div id="text-content" contenteditable="true" spellcheck="false">
         </div>
 
     </div>
