--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css"/>
     <title>Notes</title>
 </head>
+
 <body>
 
 <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
@@ -182,7 +183,7 @@
     <div class="container mx-auto textEditor hidden">
         <div class="flex justify-between text-[#3019bd] font-bold text-md pt-2">
             <span class="back-to-notes cursor-pointer pl-4"> < back to notes</span>
-            <div class="rating font-normal text-base">
+            <div class="rating font-normal text-sm">
                 unuseful
                 <input type="radio" name="rating-2" class="mask ml-2 mask-star-2 bg-[#3019bd] rating-1"/>
                 <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#3019bd] rating-2"/>
