--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </li>
 
                 <li class="nav-link">
-                    <a href="#">
+                    <a href="https://benjiwurfl.github.io/UserSettings/">
                         <i class='bx bx-cog icon'></i>
                         <span class="text nav-text">Settings</span>
                     </a>
@@ -87,7 +87,7 @@
 
         <div class="bottom-content">
             <li class="">
-                <a href="#">
+                <a href="https://thinkwisenotes.webflow.io/">
                     <i class='bx bx-log-out icon'></i>
                     <span class="text nav-text">Logout</span>
                 </a>
